buildscript {
	// The Android Gradle plugin is only required when opening the android folder stand-alone.
	// This avoids unnecessary downloads and potential conflicts when the library is included as a
	// module dependency in an application project.
	if (project == rootProject) {
		repositories {
			google()
			jcenter()
		}

		dependencies {
			classpath("com.android.tools.build:gradle:7.3.1")
		}
	}
}
apply plugin: 'com.android.library'

def safeExtGet(prop, fallback) {
	rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
}

android {
	compileSdkVersion safeExtGet("compileSdkVersion", 31)

	compileOptions {
		sourceCompatibility JavaVersion.VERSION_1_8
		targetCompatibility JavaVersion.VERSION_1_8
	}

	defaultConfig {
		minSdkVersion safeExtGet("minSdkVersion", 24)
	}
	lintOptions {
		abortOnError false
	}
}

repositories {
	mavenCentral()
	google()
	jcenter()
	maven {
		// All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
		//url "$rootDir/../node_modules/react-native/android"
		url "$rootDir/../example/node_modules/react-native/android"
	}
}


dependencies {
	implementation "com.facebook.react:react-native:+"
//	implementation "org.jetbrains.trove4j: trove4j: 20160824"
}